load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "lib",
    srcs = glob([
        "src/**/*.cpp",
        "src/**/*.h",
    ]),
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "//libs/core/lib",
        "@fast_double_parser//:lib",
        "@json-cpp//:lib",
    ],
)

cc_binary(
    name = "redisrtbot",
    srcs = glob([
        "src/**/*.cpp",
    ]),
    linkopts = [
        "-W",
    ],
    linkshared = True,
    deps = [
        "lib",
    ],
)
