load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "rtbot",
    srcs = ["src/lib.rs"],
    aliases = aliases(),
    edition = "2021",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    deps = [
        "//libs/core/lib",
        "@fast_double_parser//:lib",
        "@json-cpp//:lib",
    ] + all_crate_deps(
        normal = True,
    ),
)
