load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "md",
    srcs = glob([
        "include/**/*.md",
    ]),
)

filegroup(
    name = "srcs",
    srcs = glob([
        "include/**/*.h",
        "src/**/*.cpp",
    ]),
)

cc_library(
    name = "rtbot-std",
    srcs = glob([
        "src/**/*.cpp",
    ]),
    hdrs = glob(["include/**/*.h"]),
    copts = ["-O3"],
    includes = ["include"],
    visibility = ["//visibility:public"],
)
