load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@bazel_skylib//lib:partial.bzl", "partial")

ts_project(
    name = "ts",
    srcs = glob([
        "src/**/*",
    ]),
    declaration = True,
    transpiler = partial.make(
        swc,
        swcrc = ".swcrc",
    ),
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@nestjs/common",
        "//:node_modules/@nestjs/core",
        "//:node_modules/@rtbot/postgres",
        "//:node_modules/@types/node",
    ],
)

js_binary(
    name = "bin",
    data = [
        ":ts",
        # Added by swc during transpilation and used at runtime
        # "//:node_modules/regenerator-runtime",
    ],
    entry_point = "src/main.js",
)
